Fix accidental horizontal scrolling due to not hiding things that should've been

--- a/assets/stylesheets/manifest.sass
+++ b/assets/stylesheets/manifest.sass
@@ -95,6 +95,8 @@ body
 
   &:before,
   &:after
+    +breakpoint(small)
+      display: none
     position: absolute
     top: 50%
     height: 2px
